@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-07-01T01:19:27Z",
+  "timestamp" : "2025-07-01T12:29:54Z",
   "count_outdated" : 5036,
   "uniques_outdated" : 2697,
-  "count" : 5123,
-  "uniques" : 2765,
+  "count" : 5125,
+  "uniques" : 2767,
   "clones" : [
     {
       "timestamp": "2025-06-17T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "count_decinc": [ 0, 9 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ],
-      "uniques_decinc": [ 0, 8 ]
+      "count": 7,
+      "count_minmax": [ 7, 9 ],
+      "count_decinc": [ 2, 9 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 8 ],
+      "uniques_decinc": [ 2, 8 ]
     },
     {
       "timestamp": "2025-06-18T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 6,
       "uniques_minmax": [ 6, 6 ],
       "uniques_decinc": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2025-07-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
