@@ -1,11 +1,11 @@
 {
   "count": 87,
-  "uniques": 46,
+  "uniques": 45,
   "clones": [
     {
       "timestamp": "2025-06-17T00:00:00Z",
-      "count": 9,
-      "uniques": 8
+      "count": 7,
+      "uniques": 6
     },
     {
       "timestamp": "2025-06-18T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-06-30T00:00:00Z",
       "count": 8,
       "uniques": 6
+    },
+    {
+      "timestamp": "2025-07-01T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
